fine tune those warning found by FindBugs.